# finite-monkey-engine

./: .env.example  .gitignore  ADVANCED_SYSTEM_ARCHITECTURE.md  AGENTIC_SYSTEM.md  EXPLOIT_DISCOVERY_GUIDE.md  FINAL_VALIDATION_REPORT.md  Methdology_approach.md  OPENROUTER_SETUP.md  PARALLELIZATION_IMPROVEMENTS.md  README.md  README_CN.md  SYSTEM_OVERVIEW.md  config.example.json  demo_agentic.py  demo_protocol_analysis.py  env.example  fixed_invariants.md  help_output.txt  main.py  project_design.md  requirements.txt  simple_parallel_test.py  test_advanced_orchestration.py  test_openrouter.py  test_parallel_processing.py  test_system.py  validate_system.py
defense_agent/: .env.example  README.md  pyproject.toml
defense_agent/src/defense_agent/: cli.py
defense_agent/src/defense_agent/app/: server.py
defense_agent/src/defense_agent/harness/: executor.py  fork.py
defense_agent/src/defense_agent/memory/: knowledge.py  store.py  vector.py
defense_agent/src/defense_agent/orchestrator/: agent.py  core.py  jobs.py
defense_agent/src/defense_agent/plugins/: base.py  explorer.py  invariant_miner.py  manager.py  registry.py
defense_agent/src/defense_agent/utils/: codebase.py  config.py  llm.py  models.py  safety.py
src/: dataset_manager.py  logging_config.py  main.py
src/agentic/: __init__.py  complex_planner.py  fork_validator.py  orchestrator.py  safety_gates.py
src/checklist_pipeline/: checklist_generator.py  checklist_generator_without_code.py
src/context/: __init__.py  context_manager.py  rag_processor.py
test/: vulnerable_contract.sol
(+41 files in other folders)
